refactor(asciidoc): remove AsciidoctorJ dependency and implement lightweight AsciiDoc parser
- Replaced the `AsciidoctorJ` dependency with a custom in-house lightweight parser to eliminate external runtime requirements.
- Updated `AsciiDocParser` to reflect the new implementation, supporting headings, paragraphs, lists, blockquotes, tables, code blocks, and images.
- Extended `AsciiDocModel` with new block and inline types, including `OrderedList`, `UnorderedList`, `Blockquote`, `CodeBlock`, `ImageBlock`, `Link`, and `InlineImage`.
- Added `AsciiDocToText`, `AsciiDocToHtml`, and extended `AsciiDocToDocx` for enhanced output flexibility.
- Simplified project dependencies for better maintainability.